# comp3400-a1

./: README.md  run.sh  scores.csv
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_a.cpp  test_b.cpp  test_c.cpp
